# opynfield

./: .gitignore  README.md  pyproject.toml
dev/: OpynfieldDocsNotes.txt
docs/: coverage_types.html  future_work.html  genindex.html  index.html  modules.html  motion_probability_types.html  objects.inv  opynfield.calculate_measures.html  opynfield.config.html  opynfield.html  opynfield.plotting.html  opynfield.readin.html  output_interpretation.html  search.html  searchindex.js  tutorial.ipynb
docs/_sources/: coverage_types.rst.txt  index.rst.txt  modules.rst.txt  motion_probability_types.rst.txt  opynfield.fit_models.rst.txt  opynfield.plotting.rst.txt  opynfield.readin.rst.txt  opynfield.stat_test.rst.txt  opynfield.summarize_measures.rst.txt  tutorial.ipynb.txt  user_input_information.rst.txt
docs/source/: conf.py  coverage_types.rst  future_work.rst  index.rst  motion_probability_types.rst  opynfield.calculate_measures.rst  opynfield.rst  output_interpretation.rst  tutorial.ipynb  user_input_information.rst
html/: .buildinfo  opynfield.fit_models.html  opynfield.summarize_measures.html  py-modindex.html  tutorial.html
src/opynfield/: ReadIn.py  __init__.py  run.ipynb  run.py
test_data/: README.md
test_data/1_CantonSComparison/: Analysis1.ipynb
test_data/3_CantonSAndW1118/: Analysis3.ipynb
test_data/Analysis1_CantonSComparison/: Analysis1.ipynb
test_data/Analysis2_ArenaSizeComparison/: Analysis2.ipynb
test_data/Analysis3_CantonSAndW1118/: Analysis3.ipynb
test_data/Analysis4_C57BL6JAndKMO/: Analysis4.ipynb
tests/: test_2.py  test_one.py
(+2436 files in other folders)
